Actualizacion contacto y algunas paginas de html

--- a/FORUM/login.html
+++ b/FORUM/login.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="top-nav">
+        <a href="../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+        <a href="#">Noticias</a>
+        <a href="../FORUM/login.html">Forum</a>
+        <a href="../CONTACTO/index.html">Contacto</a>
+    </div>
+
     <div class="tarjeta-central">
         <div class="grid-container">
             <div class="titulo-001">
@@ -23,8 +30,6 @@
                     <input onclick=go() type=button value=Acceder> <br> <br>
                     <a href="../FORUM/REGISTER/registro.html">Register</a>
                 </form>
-
-
             </div>
         </div>
     </div>
