--- a/PAGINA-PRINCIPAL-INICIO/index.html
+++ b/PAGINA-PRINCIPAL-INICIO/index.html
@@ -22,10 +22,10 @@
 <body>
 
   <div class="top-nav">
-    <a href="#">Inicio</a>
+    <a href="../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
     <a href="#">Noticias</a>
-    <a href="#">Forum</a>
-    <a href="#">Contacto</a>
+    <a href="../FORUM/login.html">Forum</a>
+    <a href="../CONTACTO/index.html">Contacto</a>
     <div class="buscador-google">
       <label for="gsearch">Google:<label>
           <input type="search" id="gsearch" name="gsearch">
