--- a/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
+++ b/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
@@ -1,16 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>ATRIBUTOS</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elemntos</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,8 +41,8 @@
         </div>
         <div class="grid-central-001">
             <div class="titulo-html-001">
-                <h1>ATRIBUTOS DEL LENGUAJE HTML</h1>
-                <p>¿Qué son los atributos?<br>Los atributos en el lenguaje HTML proporcionan información adicional a los
+                <h1>ELEMENTOS DEL LENGUAJE HTML</h1>
+                <p>¿Qué son los elementos?<br>Los elementos en el lenguaje HTML proporcionan información adicional a los
                     <a href="../HTML-ELEMENTOS/index.html"><span class="span-0001">elementos</span></a>
                 </p>
             </div>
@@ -121,13 +116,7 @@
                                 </span></a>, se incluye dentro del html, y se usa para epecificar el idioma de la
                             pagina. <br><b>Como por ejemplo: < html lang="es">, para el caso de la pagina ser en
                                     español. </b></p>
-
                     </li>
-
-
-
-
-
 
                 </ul>
             </div>
