--- a/FORUM/REGISTER/registro.html
+++ b/FORUM/REGISTER/registro.html
@@ -11,28 +11,34 @@
 
 <body>
     <div class="tarjeta-central">
-
         <div class="grid-container">
-
             <div class="titulo-001">
                 <h2>FORUM</h2>
             </div>
-
             <div class="login-01">
-                <FORM name=form action="no-se-que-poner"></FORM>
-                <p>Name<input type="text" name="login"></p>
-                <p>Email<input type="text" name="email"></p>
-                <p>Password<input type="password" name="password"></p>
-                <button>ok</button> <br> <br>
-                <a href="../../FORUM/login.html">Back</a>
+                <form id="form">
+                    <!--<label for="username">Username:</label><br>-->
+                    <input type="text" id="username" name="username" hidden><br>
+
+                    <label for="name">Name:</label><br>
+                    <input type="text" id="name" name="name"><br>
+                    <label for="apellido">Apellido:</label><br>
+                    <input type="text" id="surname" name="surname"><br>
+                    <label for="email">Email:</label><br>
+                    <input type="email" id="email" name="email"><br>
+
+                    <label for="pwd">Password:</label><br>
+                    <input type="password" id="password" name="password"><br> <br>
+                    <button type="submit">Acceder</button>
+                </form>
             </div>
+            <a href="../login.html">IR AL login</a>
 
         </div>
     </div>
-    <script src="token.js"></script>
-    <script src="signup.js"></script>
+    <script src="registro.js"></script>
+    <!--<script src="token.js"></script> -->
 
-    <script src="index.js"></script>
 
 
 </html>
