--- a/FORUM/login.html
+++ b/FORUM/login.html
@@ -23,19 +23,23 @@
                 <h2>FORUM</h2>
             </div>
             <div class="login-01">
-                <form name=form action="no-se-que-poner">
-                    <p>Login</p>
-                    <p>Name<input type="text" name="login"></p>
-                    <p>Password<input type="password" name="password"></p>
-                    <input onclick=go() type=button value=Acceder> <br> <br>
-                    <a href="../FORUM/REGISTER/registro.html">Register</a>
+                <form id="login">
+
+                    <label for="username">Email:</label><br>
+                    <input type="email" id="identifier" name="identifier"><br>
+                    <label for="pwd">Password:</label><br>
+                    <input type="password" id="password" name="password"><br> <br>
+                    <button type="submit">Acceder</button>
+
                 </form>
             </div>
+            <a href="../FORUM/REGISTER/registro.html">Register</a>
+            <a href="../FORUM/REGISTER/registro.html">IR AL login</a>
         </div>
     </div>
 
     <script src="error-datos.js"></script>
-    <script src="signup.js"></script>
+    <script src="login.js"></script>
 
 </body>
 
