--- a/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
+++ b/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
@@ -42,82 +42,42 @@
         <div class="grid-central-001">
             <div class="titulo-html-001">
                 <h1>ELEMENTOS DEL LENGUAJE HTML</h1>
-                <p>¿Qué son los elementos?<br>Los elementos en el lenguaje HTML proporcionan información adicional a los
-                    <a href="../HTML-ELEMENTOS/index.html"><span class="span-0001">elementos</span></a>
+                <p>
+                    El elemento HTML es todo, desde la etiqueta de inicio hasta la etiqueta final:
+
+                </p>
+                <p>
+                    < nombre de la etiqueta> El contenido < /el nombre de la etiqueda>
                 </p>
             </div>
             <div class="lista-que-es-html001">
                 <ul>
                     <b>
-                        <p>¿Que pueden ser?</p>
+                        <p>Algunos ejemplos de etiquedas mas usadas</p>
                     </b>
-                    <li>Todos los elementos de HTML pueden tener atributos</li>
-                    <li>Los atributos proporcionan información adicional sobre los elementos</li>
-                    <li>Lsos atributos siempre se especifian en la etiqueta de incio.</li>
-                    <li>Los atributos generalmente vienen en pares de nombre + el valor como, nombre="valor".</li>
+                    <li>
+                        < h1> con su cierre, "se usa para titulos" o letras mas grandes que el párrafo< / h1>
+                    </li>
+                    <li>
+                        < p> Para escribir párrafos, con su cierre < /p>
+                    </li>
                 </ul>
                 <ul>
                     <b>
-                        <p>Uno de los atributos más usados, es el <a href="#"><span class="span-0001">href</span></a>.
-                        </p>
+                        Importante no olvidar el cierre de las etiquetas.
                     </b>
-                    <li>El <span class="span-0001">href</span> especifica la URL de la página que lo va el enlace.</li>
-                    <li>Normalmente va acompañado de la etiqueta <a href="#"><span class="span-0001">
-                                < a>.</a></span></a></li>
-
-
-                    <br><b>
-                        <p>El atributo src.</p>
-                    </b>
-                    <li>Cuando pones, usas la etiqueta de la imagen, que es <a href="#"><span class="span-0001">
-                                < img>
-                            </span></a>, el atributo src sirve para especificar la imagen que se va a mostrar.</a>,
+                    <p>
+                        Ya que el codigo no va a funcionar y va a salir error:
+                    </p>
+                    <li>
+                        < h1 si no pongo el cierre, el titulo no funciona </li>
+                    <li>
+                        <h1>
+                            < h1 pero si pongo el cierre, si funciona < / h1>
+                        </h1>
                     </li>
-                    <li>Así quedaria en un ejemplo, < img src="imagen.jpg">.</li>
                 </ul>
                 <ul>
-                    <b>
-                        <p>Los atributos de alto y ancho</p>
-                    </b><br>
-                    <li> La etiqueta de la imagen, < img> deben de contener atributos de width y height, las cuales
-                            definen el largo y la altura de la imagen.
-                    </li><br>
-                    <li>
-                        <b>
-                            <p>El atributo alt.</p>
-                        </b>
-                        <p>El <span class="alt">alt</span> atributo que lo requiere la etiqueta < img> especifica un
-                                texto alternativo para la imagen, si la imagen por algún motivo no se puede mostrar.
-                                Esto puede deberse a una conexión lenta, a un error en el srcatributo, o si el usuario
-                                usa un lector de pantalla.</p>
-                    </li>
-                    <li><img class="img-estructura-001" src="../imagenes/estructura-html-001.png"></li>
-                    <li>
-                        <b>
-                            <p>El Atributo de estilo</p>
-                        </b>
-                        <p>El Style en su forma de atributo, <a href="#"><span class="href">
-                                    < style>
-                                        </style>
-                                </span></a>, se usa para agregar estilo en linea, es decir en la misma linea del
-                            elemento.
-                            <br>Ejemplo:
-                        <P style="color: red">
-                            < p style="color-red">TODO ESTE TEXTO ESTARIA EN ROJO< /p>
-                        </P>
-                        </p>
-                    </li>
-                    <li>
-                        <b>
-                            <p>El atributo lang</p>
-                        </b>
-                        <p>El atributo <a href="#"><span class="span-0001">
-                                    < lang>
-                                </span></a>, se incluye dentro del html, y se usa para epecificar el idioma de la
-                            pagina. <br><b>Como por ejemplo: < html lang="es">, para el caso de la pagina ser en
-                                    español. </b></p>
-                    </li>
-
                 </ul>
             </div>
         </div>
