--- a/FORUM/login.html
+++ b/FORUM/login.html
@@ -33,8 +33,8 @@
 
                 </form>
             </div>
-            <a href="../FORUM/REGISTER/registro.html">Register</a>
-            <a href="../FORUM/REGISTER/registro.html">IR AL login</a>
+            <button><a href="../FORUM/REGISTER/registro.html">Register</a></button>
+            <button><a href="../FORUM/REGISTER/registro.html">IR AL login</a></button>
         </div>
     </div>
 
