actualizado enlaces y correción de algunos errores

--- a/CONTACTO/contacto.html
+++ b/CONTACTO/contacto.html
@@ -35,8 +35,6 @@
         </div>
     </div>
 
-
-
     <div class="container-form">
         <div class="informacion-form">
             <h2>Soporte</h2>
@@ -44,10 +42,9 @@
                 tendrás una respuesta lo mas rápido posible</p>
             </p>
             <a href="#"><img src="../Carpeta-imagenes/telefono.png">1234567890</a>
-            <a href="#"><img
-                    src="../Carpeta-imagenes/correo-electronico-vacio.png">soporte-proyectofinaleoi@gmail.com</a>
+            <a href="#"><img src="../Carpeta-imagenes/correo-electronico-vacio.png">proyectoeoi1@gmail.com</a>
             <a href="#"><img src="../Carpeta-imagenes/ubicacion.png">España</a>
-            <form action="https://formsubmit.co/rogeriolucas14698@gmail.com" method="post">
+            <form action="https://formsubmit.co/proyectoeoi1@gmail.com" method="post">
                 <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="contacto-form">
                 <input type="email" name="email" placeholder="Ingresa tu email" class="contacto-form">
                 <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
@@ -55,9 +52,6 @@
             </form>
         </div>
     </div>
-
-
-
 
 </body>
 
