--- a/PAGINA-PRINCIPAL-INICIO/index.html
+++ b/PAGINA-PRINCIPAL-INICIO/index.html
@@ -15,17 +15,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Hello, worl</title>
+  <title>Thor S2</title>
 
 </head>
 
 <body>
 
   <div class="top-nav">
-    <a href="../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+    <a href="#">Inicio</a>
     <a href="#">Noticias</a>
     <a href="../FORUM/login.html">Forum</a>
-    <a href="../CONTACTO/index.html">Contacto</a>
+    <a href="../CONTACTO/contacto.html">Contacto</a>
     <div class="buscador-google">
       <label for="gsearch">Google:<label>
           <input type="search" id="gsearch" name="gsearch">
@@ -34,26 +34,19 @@
   </div>
   <div class="grid-container">
     <div class="item1">
-      <h3>PAGINAS</h3>
+      <h3>LEARN</h3>
       <div class="menu-lateral">
-        <li><a href="../WEB-HTML-OO1/index.html" target="_blank">HTML</a></li>
-        <li><a href="../WEB-CSS-001/index.html">CSS</a></li>
-        <li><a href="#">JAVA SCRIPT</a></li>
-        <li><a href="#">LO QUE SEA</a></li>
-        <li><a href="#">LO QUE SEA</a></li>
-        <li><a href="#">LO QUE SEA</a></li>
-        <li><a href="#">LO QUE SEA</a></li>
+        <li><a href="../WEB-HTML-OO1/aprende-html.html" target="_blank">HTML</a></li>
+        <li><a href="../" target="_blank">CSS</a></li>
+        <li><a href="#" target="_blank">JAVA SCRIPT</a></li>
         <li><a href="https://www.w3schools.com/html/" target="_blank">W3SCHOOLS</a></li>
-        <li><a
-            href="https://www.eoi.es/es/programas/mbas-masters?course_modality_tid[]=18024&gclid=CjwKCAiA68ebBhB-EiwALVC-NkyonfIKxCBOtLY81PuU53oG_FT4QIG9yzCy2gPSNIvmFMogUZ8RvxoCnBwQAvD_BwE"
-            target="_blank">EOI</a></li>
-        <li><a href="https://www.udemy.com/" target="_blank">UDEMY</a></li>
-        <li><a href="#" target="_blank">EXTRA</a></li>
+        <li><a href="#">OTROS</a></li>
+        <li><a href="#">HOLA MUNDO</a></li>
       </div>
     </div>
     <div class="item2">
       <div class="texto-destacado001">
-        <a href="../WEB-HTML-OO1/index.html" target="_blank" class="tarjetas">
+        <a href="../WEB-HTML-OO1/aprende-html.html" target="_blank" class="tarjetas">
           <h2> Introduccion al lenguaje de html</h2>
           <img src="../Carpeta-imagenes/html.jpg">
           <p>Aprende a usar html de manera muy sencilla</p>
@@ -70,7 +63,8 @@
       <p>Aprende a usar JavaScript de manera fácil y rapida</p>
     </div>
     <div class="item5">
-      <h1>AQUI PODEMOS PONER PUBLICIDAD</h1>
+      <h1>AQUI PODEMOS PONER PUBLICIDAD <br><br>monetizacion de la pagina</h1>
+
     </div>
     <div class="item6">
       <h2>Juega y repasa de manera muy didacta</h2>
