--- a/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
+++ b/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
@@ -12,15 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-elementos.css">
 </head>
 
 <body>
     <div class="top-nav">
-        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
         <a href="#">Noticias</a>
-        <a href="../../FORUM/login.html">Forum</a>
-        <a href="../../CONTACTO/index.html">Contacto</a>
+        <a href="../../FORUM/login.html" target="_blank">Forum</a>
+        <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
         <div class="buscador-google">
             <label for="gsearch">Google:<label>
                     <input type="search" id="gsearch" name="gsearch">
@@ -30,13 +30,12 @@
     </div>
     <div class="grid-principal001">
         <div class="menu-lateral">
-            <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">INICIO</a></li>
-            <li><a href="#" target="_blank">HTML ELEMENTOS</a></li>
-            <li><a href="../HTML-ATRIBUTOS/index.html" target="_blank">HTML ATRIBUTOS</a></li>
-            <li><a href="#">HTML ENCABEZADOS</a></li>
-            <li><a href="#">HTML PÁRRAFOS</a></li>
-            <li><a href="#">HTML ESTÍLO</a></li>
-            <li><a href="#">HTML ENCABEZADOS</a></li>
+            <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
+            <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+            <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
+            <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            <li><a href="../">HTML PÁRRAFOS</a></li>
+            <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
 
         </div>
         <div class="grid-central-001">
