--- a/CONTACTO/CONTACTO-ROGERIO/rogerio.html
+++ b/CONTACTO/CONTACTO-ROGERIO/rogerio.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto-Rogerio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-rogerio.css">
 </head>
 
 <body>
     <div class="top-nav">
         <a href="../../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
         <a href="#">Noticias</a>
-        <a href="../../FORUM/login.html">Forum</a>
-        <a href="../../CONTACTO/index.html">Contacto</a>
+        <a href="../../FORUM/inicio.html">Forum</a>
+        <a href="#">Contacto</a>
     </div>
 
     <div class="container-form">
