render subido y actualizado en la pagina, y enlaces modificado para que en nelify se pueda ver

--- a/CONTACTO/CONTACTO-ROGERIO/rogerio.html
+++ b/CONTACTO/CONTACTO-ROGERIO/rogerio.html
@@ -11,10 +11,11 @@
 
 <body>
     <div class="top-nav">
-        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+        <a href="../../index.html">Inicio</a>
         <a href="#">Noticias</a>
         <a href="../../FORUM/inicio.html">Forum</a>
         <a href="#">Contacto</a>
+        <img src="../../Carpeta-imagenes/logo-eoi.png">
     </div>
 
     <div class="container-form">
