--- a/FORUM/login.html
+++ b/FORUM/login.html
@@ -11,10 +11,17 @@
 
 <body>
     <div class="top-nav">
-        <a href="../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="#">Noticias</a>
         <a href="../FORUM/login.html">Forum</a>
-        <a href="../CONTACTO/index.html">Contacto</a>
+        <a href="../CONTACTO/contacto.html">Contacto</a>
+        <img src="../Carpeta-imagenes/logo-eoi.png">
+        <div class="buscador-google">
+            <label for="gsearch">Google:<label>
+                    <input type="search" id="gsearch" name="gsearch">
+                    <input type="submit">
+        </div>
+    </div>
     </div>
 
     <div class="tarjeta-central">
@@ -37,9 +44,10 @@
             <button><a href="../FORUM/REGISTER/registro.html">IR AL login</a></button>
         </div>
     </div>
-
+    <script src="../../conexion.js"></script>
     <script src="error-datos.js"></script>
     <script src="login.js"></script>
+
 
 </body>
 
