--- a/WEB-HTML-OO1/HTML-ENLACES/enlaces.html
+++ b/WEB-HTML-OO1/HTML-ENLACES/enlaces.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style-estilo.css">
+    <link rel="stylesheet" href="style-enlaces.css">
 
 </head>
 
@@ -27,7 +27,7 @@
                 <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
                 <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
                 <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACES</a></li>
                 <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
 
             </div>
