--- a/WEB-HTML-OO1/aprende-html.html
+++ b/WEB-HTML-OO1/aprende-html.html
@@ -34,11 +34,11 @@
   </div>
   <div class="grid-principal001">
     <div class="menu-lateral">
-      <li><a href="../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
+      <li><a href="../index.html">INICIO</a></li>
       <li><a href="../WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
       <li><a href="../WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
       <li><a href="../WEB-HTML-OO1/HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-      <li><a href="../WEB-HTML-OO1/">HTML PÁRRAFOS</a></li>
+      <li><a href="HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
       <li><a href="#">HTML ESTÍLO</a></li>
     </div>
     <div class="grid-central-001">
