--- a/FORUM/REGISTER/registro.html
+++ b/FORUM/REGISTER/registro.html
@@ -36,6 +36,7 @@
 
         </div>
     </div>
+    <script src="../../../conexion.js"></script>
     <script src="registro.js"></script>
     <!--<script src="token.js"></script> -->
 
