--- a/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
+++ b/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
@@ -35,12 +35,12 @@
     </div>
     <div class="grid-principal001">
         <div class="menu-lateral">
-            <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
+            <li><a href="../../index.html">INICIO</a></li>
             <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
             <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
             <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-            <li><a href="../">HTML PÁRRAFOS</a></li>
-            <li><a href="../">HTML ESTÍLO</a></li>
+            <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+            <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
 
 
         </div>
@@ -72,10 +72,13 @@
 
 
                     <br><b>
-                        <p>El atributo src.</p>
+
+                        <p>El atributo src.
+                        <pre>Pink: &lt;span style="background-color:#FF00FF"&gt;Pink Text&lt;/span&gt;</pre>
+                        </p>
                     </b>
                     <li>Cuando pones, usas la etiqueta de la imagen, que es <a href="#"><span class="span-0001">
-                                < img>
+                                &lt;img&gt;
                             </span></a>, el atributo src sirve para especificar la imagen que se va a mostrar.</a>,
                     </li>
                     <li>Así quedaria en un ejemplo, < img src="imagen.jpg">.</li>
@@ -96,7 +99,7 @@
                                 Esto puede deberse a una conexión lenta, a un error en el srcatributo, o si el usuario
                                 usa un lector de pantalla.</p>
                     </li>
-                    <li><img class="img-estructura-001" src="../imagenes/estructura-html-001.png"></li>
+                    <li><img class="img-estructura-001" src="../../Carpeta-imagenes/estructura-html.png"></li>
                     <li>
                         <b>
                             <p>El Atributo de estilo</p>
