--- a/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
+++ b/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="top-nav">
-        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
+        <a href="../../index.html" target="_blank">Inicio</a>
         <a href="#">Noticias</a>
         <a href="../../FORUM/login.html" target="_blank">Forum</a>
         <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
@@ -32,9 +32,9 @@
         <div class="menu-lateral">
             <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
             <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-            <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
+            <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
             <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-            <li><a href="../">HTML PÁRRAFOS</a></li>
+            <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACES</a></li>
             <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
 
         </div>
