--- a/WEB-HTML-OO1/HTML-ENCABEZADOS/encabezados.html
+++ b/WEB-HTML-OO1/HTML-ENCABEZADOS/encabezados.html
@@ -11,6 +11,36 @@
 </head>
 
 <body>
+    <div class="top-nav">
+        <a href="../../index.html" target="_blank">Inicio</a>
+        <a href="#">Noticias</a>
+        <a href="../../FORUM/login.html" target="_blank">Forum</a>
+        <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
+        <div class="buscador-google">
+            <label for="gsearch">Google:<label>
+                    <input type="search" id="gsearch" name="gsearch">
+                    <input type="submit">
+        </div>
+        <div class="grid-principal001">
+            <div class="menu-lateral">
+                <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
+                <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+                <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
+                <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML PÁRRAFOS</a></li>
+                <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
+
+            </div>
+            <div class="grid-central-001">
+                <div class="titulo-html-001">
+
+                </div>
+                <div class="lista-que-es-html001">
+                </div>
+            </div>
+            <div class="grid-publicidad">
+                <h1>publ</h1>
+            </div>
 
 </body>
 
