--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="menu-lateral">
         <li><a href="WEB-HTML-OO1/aprende-html.html" target="_blank">HTML</a></li>
         <li><a href="#" target="_blank">CSS</a></li>
-        <li><a href="#" target="_blank">JAVA SCRIPT</a></li>
+        <li><a href="" target="_blank">JAVA SCRIPT</a></li>
         <li><a href="https://www.w3schools.com/html/" target="_blank">W3SCHOOLS</a></li>
         <li><a href="#">OTROS</a></li>
         <li><a href="#">HOLA MUNDO</a></li>
