pagina principal actualizada, imagenes añadidias, y queda centrar las imagenes, añadir footer y poco mas.

--- a/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
+++ b/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
@@ -28,8 +28,11 @@
         <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
         <div class="buscador-google">
             <label for="gsearch">Google:<label>
-                    <input type="search" id="gsearch" name="gsearch">
-                    <input type="submit">
+                    <form method=GET action="http://www.google.com/search">
+                        <input typeE=text name=q size=31 maxlength=255 value="">
+                        <input type=hidden name=hl value=es>
+                        <input type=submit name=btnG value="Go!">
+                    </form>
         </div>
 
     </div>
