--- a/CONTACTO/contacto.html
+++ b/CONTACTO/contacto.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class="top-nav">
-        <a href="../PAGINA-PRINCIPAL-INICIO/index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="#">Noticias</a>
         <a href="../FORUM/login.html">Forum</a>
-        <a href="../CONTACTO/index.html">Contacto</a>
+        <a href="#">Contacto</a>
     </div>
 
     <div class="contactos-linea">
