--- a/WEB-HTML-OO1/HTML-LISTAS/lista.html
+++ b/WEB-HTML-OO1/HTML-LISTAS/lista.html
@@ -26,12 +26,30 @@
         </div>
         <div class="grid-principal001">
             <div class="menu-lateral">
-                <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
-                <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-                <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
+                <div class="jello-vertical">
+                    <li><a href="../aprende-html.html">INICIO HTML</a></li>
+                </div>
+                <div class="jello-vertical">
+                    <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+                </div>
+                <div class="jello-vertical">
+                    <li><a href="../HTML-COLORES/colores.html">HTML COLORES</a></li>
+                </div>
+                <div class="jello-vertical">
+                    <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
+                </div>
+                <!--<div class="jello-vertical">
                 <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            </div>
+            <div class="jello-vertical">
                 <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
-                <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical"> 
+                <li><a href="../HTML-LISTAS/lista.html">HTML LISTAS</a></li>
+            </div> -->
 
             </div>
             <div class="grid-central-001">
