--- a/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
+++ b/WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>ATRIBUTOS</title>
+    <title>Atributo</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
 
 <body>
     <div class="top-nav">
-        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
-        <a href="../../NOTICAS/">Noticias</a>
+        <a href="../../index.html" target="_blank">Inicio</a>
+        <!--<a href="../../NOTICAS/">Noticias</a> -->
         <a href="../../FORUM/login.html" target="_blank">Forum</a>
-        <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
+        <a href="../../CONTACTO/contacto.html" target="_blank">Contacto</a>
         <div class="buscador-google">
             <label for="gsearch">Google:<label>
                     <form method=GET action="http://www.google.com/search">
@@ -38,13 +38,30 @@
     </div>
     <div class="grid-principal001">
         <div class="menu-lateral">
-            <li><a href="../../index.html">INICIO</a></li>
-            <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-            <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
-            <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-            <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
-            <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
-
+            <div class="jello-vertical">
+                <li><a href="../aprende-html.html">INICIO HTML</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-COLORES/colores.html">HTML COLORES</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
+            </div>
+            <!--<div class="jello-vertical">
+                <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical"> 
+                <li><a href="../HTML-LISTAS/lista.html">HTML LISTAS</a></li>
+            </div> -->
 
         </div>
         <div class="grid-central-001">
@@ -127,6 +144,16 @@
                                 </span></a>, se incluye dentro del html, y se usa para epecificar el idioma de la
                             pagina. <br><b>Como por ejemplo: < html lang="es">, para el caso de la pagina ser en
                                     español. </b></p>
+                    </li>
+                    <li>
+                        <b>
+                            <p>El atributo title</p>
+                        </b>
+                        <p>El titleatributo define alguna información adicional sobre un elemento.
+
+                            El valor del atributo de título se mostrará como información sobre herramientas cuando pase
+                            el mouse sobre el elemento.</p>
+                        <p>&lt;p <span class="span-0001">title="hola mundo soy el titulo"</span>&gt; &lt;p&gt;</p>
                     </li>
 
                 </ul>
