--- a/WEB-HTML-OO1/HTML-COLORES/colores.html
+++ b/WEB-HTML-OO1/HTML-COLORES/colores.html
@@ -23,7 +23,7 @@
 <body>
     <div class="top-nav">
         <a href="../../index.html" target="_blank">Inicio</a>
-        <a href="../../NOTICAS/">Noticias</a>
+        <!--<a href="../../NOTICAS/">Noticias</a>-->
         <a href="../../FORUM/login.html" target="_blank">Forum</a>
         <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
         <div class="buscador-google">
@@ -38,14 +38,30 @@
     </div>
     <div class="grid-principal001">
         <div class="menu-lateral">
-            <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
-            <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-            <li><a href="../HTML-ATRIBUTOS/index.html">HTML ATRIBUTOS</a></li>
-            <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-            <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
-            <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
-
-
+            <div class="jello-vertical">
+                <li><a href="../aprende-html.html">INICIO HTML</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-COLORES/colores.html">HTML COLORES</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
+            </div>
+            <!--<div class="jello-vertical">
+                <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical"> 
+                <li><a href="../HTML-LISTAS/lista.html">HTML LISTAS</a></li>
+            </div> -->
         </div>
         <div class="grid-central-001">
             <div class="titulo-html-001">
@@ -71,14 +87,40 @@
                     <p>De igual forma puedes cambiar el color de texto al que te gusta, con colo: + color que te gusta
                     </p>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <b>
+                                <p>Color de texto</p>
+                            </b>
+                        </li>
+                        <li>
+                            <p>puedes cambiar el color de texto que mas te guste</p>
+                        </li>
+                        <li>
+                            <h1 style="color:navy">HOLA MUNDO</h1>
+                            <p style="color:green">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
+                                eos voluptatem molestias libero commodi alias eius sint error iusto! Et, placeat iure
+                                error corporis pariatur odio magni quam aut nostrum!</p>
+                            <p style="color:orange">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+                                deleniti. Sit, libero similique. Maxime nihil odit deleniti, aspernatur ipsa eaque
+                                blanditiis quaerat excepturi, ex veniam totam dignissimos voluptates in nam.</p>
+                        </li>
+                        <li>
+                            <p>Todo ello con usando una hoja de estilos css, usando stilo en linea;<br>
+                                &lt;p&gt; style="color:TU COLOR FAVORITO;" &lt;p&gt;
+                            </p>
+                        </li>
                     </ul>
                     <ul>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <b>
+                                <p>Cambiar el color del borde</p>
+                            </b>
+                        </li>
+                        <li>
+                            <p style="border:5px solid black" ;>HOLA MUNDO, </p>
+                            <p style="border:5px solid green" ;>HOLA MUNDO, </p>
+                            <p style="border:5px solid red" ;>HOLA MUNDO, </p>
+                        </li>
                         <li></li>
                         <li></li>
                     </ul>
@@ -92,7 +134,11 @@
 
         </div>
         <div class="grid-publicidad">
-            <h1>publ</h1>
+            <h1 style="font-size:30px">publi</h1>
+            <p style="font-size:20px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, illum quas
+                exercitationem recusandae
+                veritatis fugit aliquam iure voluptatem nostrum quo animi magni cumque odio eum omnis incidunt. Quae, ea
+                autem.</p>
         </div>
 
         <!-- Optional JavaScript -->
