--- a/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
+++ b/WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elemntos</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Elementos</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +22,8 @@
 
 <body>
     <div class="top-nav">
-        <a href="../../index.html" target="_blank">Inicio</a>
-        <a href="#">Noticias</a>
+        <a href="../../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
+        <!--<a href="../../NOTICAS/">Noticias</a> -->
         <a href="../../FORUM/login.html" target="_blank">Forum</a>
         <a href="../../CONTACTO/index.html" target="_blank">Contacto</a>
         <div class="buscador-google">
@@ -33,54 +38,73 @@
     </div>
     <div class="grid-principal001">
         <div class="menu-lateral">
-            <li><a href="../../PAGINA-PRINCIPAL-INICIO/index.html">INICIO</a></li>
-            <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-            <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
-            <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-            <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACES</a></li>
-            <li><a href="../HTML-ESTÍLOS/">HTML ESTÍLO</a></li>
+            <div class="jello-vertical">
+                <li><a href="../aprende-html.html">INICIO HTML</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-COLORES/colores.html">HTML COLORES</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
+            </div>
+            <!--<div class="jello-vertical">
+                <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical"> 
+                <li><a href="../HTML-LISTAS/lista.html">HTML LISTAS</a></li>
+            </div> -->
 
         </div>
         <div class="grid-central-001">
             <div class="titulo-html-001">
-                <h1>ELEMENTOS DEL LENGUAJE HTML</h1>
-                <p>
-                    El elemento HTML es todo, desde la etiqueta de inicio hasta la etiqueta final:
-
-                </p>
-                <p>
-                    < nombre de la etiqueta> El contenido < /el nombre de la etiqueda>
+                <h1>Elementos del lenguaje html</h1>
+                <p>¿Qué son los elementos?<br>El elemento HTML es todo, desde la etiqueta de inicio hasta la etiqueta
+                    final.
                 </p>
             </div>
             <div class="lista-que-es-html001">
                 <ul>
-                    <b>
-                        <p>Algunos ejemplos de etiquedas mas usadas</p>
-                    </b>
                     <li>
-                        < h1> con su cierre, "se usa para titulos" o letras mas grandes que el párrafo< / h1>
-                    </li>
-                    <li>
-                        < p> Para escribir párrafos, con su cierre < /p>
-                    </li>
+                        <p>&lt;nombre de la etiqueta&gt; su contenido &lt;cierre de la etiqueta/&gt;</p>
+                    </li>&lt;&gt;
                 </ul>
                 <ul>
-                    <b>
-                        Importante no olvidar el cierre de las etiquetas.
-                    </b>
-                    <p>
-                        Ya que el codigo no va a funcionar y va a salir error:
-                    </p>
                     <li>
-                        < h1 si no pongo el cierre, el titulo no funciona </li>
+                        <b>
+                            <p>Elementos de HTML vacíos</p>
+                        </b>
+                    </li>
                     <li>
-                        <h1>
-                            < h1 pero si pongo el cierre, si funciona < / h1>
-                        </h1>
+                        <p>
+                            Los elementos HTML sin contenido se denominan elementos vacíos.
+
+                            La &lt;br&gt; etiqueta define un salto de línea y es un elemento vacío sin una etiqueta de
+                            cierre:
+                        </p>
+                    </li>
+                    <li>
+                        <b>
+                            <p>HTML no distingue entre mayúsculas y minúsculas</p>
+                        </b>
+                    </li>
+                    <li>Las etiquetas HTML no distinguen entre mayúsculas y minúsculas: &lt;P&gt;<br>
+                        significa lo mismo que
+                        &lt;p&gt;. <br> El estándar HTML no requiere etiquetas en minúsculas, pero W3C recomienda
+                        minúsculas en HTML
+                        y exige minúsculas para tipos de documentos más estrictos como XHTML.
+
                     </li>
                 </ul>
-                <ul>
-                </ul>
+
             </div>
         </div>
         <div class="grid-publicidad">
