--- a/WEB-HTML-OO1/aprende-html.html
+++ b/WEB-HTML-OO1/aprende-html.html
@@ -23,7 +23,7 @@
 <body>
   <div class="top-nav">
     <a href="../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
-    <a href="../NOTICAS/">Noticias</a>
+    <!-- <a href="../NOTICAS/">Noticias</a>-->
     <a href="../FORUM/inicio.html" target="_blank">Forum</a>
     <a href="../CONTACTO/contacto.html" target="_blank">Contacto</a>
     <div class="buscador-google">
@@ -37,12 +37,31 @@
   </div>
   <div class="grid-principal001">
     <div class="menu-lateral">
-      <li><a href="../index.html">INICIO</a></li>
-      <li><a href="../WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
-      <li><a href="../WEB-HTML-OO1/HTML-ATRIBUTOS/atributos.html">HTML ATRIBUTOS</a></li>
-      <li><a href="../WEB-HTML-OO1/HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
-      <li><a href="HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
-      <li><a href="#">HTML ESTÍLO</a></li>
+      <div class="jello-vertical">
+        <li><a href="../WEB-HTML-OO1/aprende-html.html">INICIO HTML</a></li>
+      </div>
+      <div class="jello-vertical">
+        <li><a href="../WEB-HTML-OO1/HTML-ELEMENTOS/elementos.html">HTML ELEMENTOS</a></li>
+      </div>
+      <div class="jello-vertical">
+        <li><a href="../WEB-HTML-OO1/HTML-COLORES/colores.html">HTML COLORES</a></li>
+      </div>
+      <div class="jello-vertical">
+        <li><a href="../WEB-HTML-OO1/HTML-COLORES/colores.html">HTML ATRIBUTOS</a></li>
+      </div>
+      <!--<div class="jello-vertical">
+                <li><a href="../HTML-ENCABEZADOS/encabezados.html">HTML ENCABEZADOS</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ENLACES/enlaces.html">HTML ENLACE</a></li>
+            </div>
+            <div class="jello-vertical">
+                <li><a href="../HTML-ESTÍLOS/estilos.html">HTML ESTÍLO</a></li>
+            </div>
+            <div class="jello-vertical"> 
+                <li><a href="../HTML-LISTAS/lista.html">HTML LISTAS</a></li>
+            </div> -->
+
     </div>
     <div class="grid-central-001">
       <div class="titulo-html-001">
