--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="top-nav">
     <div class="btn-nav"><a href="#">Inicio</a></div>
-    <div class="btn-nav"><a href="#">Noticias</a></div>
+    <!--<div class="btn-nav"><a href="#">Noticias</a></div> -->
     <div class="btn-nav"><a href="../FORUM/login.html">Forum</a></div>
     <div class="btn-nav"><a href="../CONTACTO/contacto.html">Contacto</a></div>
     <div class="buscador-google">
@@ -50,7 +50,7 @@
           <li><a href="WEB-JAVASCRIPT/js_introduccion.html" target="_blank">JAVA SCRIPT</a></li>
         </div>
         <div class="jello-vertical">
-          <li><a href="https://www.w3schools.com/html/" target="_blank">W3SCHOOLS</a></li>
+          <li><a href="https://www.w3schools.com/" target="_blank">W3SCHOOLS</a></li>
         </div>
         <div class="jello-vertical">
           <li><a href="#">OTROS</a></li>
@@ -93,8 +93,7 @@
     <div class="item5">
       <h1>AQUI PODEMOS PONER PUBLICIDAD <br><br>monetizacion de la pagina</h1>
       <img src="/Carpeta-imagenes/emoji-recortado.png">
-
-
+      <img src="/Carpeta-imagenes/pizza.png" style="border-radius:50px;">
     </div>
     <div class="item6">
       <h2>Juega y repasa de manera muy didacta</h2>
