--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="top-nav">
     <div class="btn-nav"><a href="#">Inicio</a></div>
-    <!--<div class="btn-nav"><a href="#">Noticias</a></div> -->
+    <div class="btn-nav"><a href="#">Noticias</a></div>
     <div class="btn-nav"><a href="../FORUM/login.html">Forum</a></div>
     <div class="btn-nav"><a href="../CONTACTO/contacto.html">Contacto</a></div>
     <div class="buscador-google">
@@ -69,7 +69,6 @@
             <p>Aprende a usar html de manera muy sencilla</p>
           </a>
         </div>
-
       </div>
     </div>
     <div class="item3">
