contacto diana actualizado

--- a/CONTACTO/contacto.html
+++ b/CONTACTO/contacto.html
@@ -26,11 +26,11 @@
             <p>Rogerio L. Viana</p>
         </div>
         <div class="contacto-creadores">
-            <a href="../CONTACTO/CONTACTO-ROGERIO/rogerio.html"><img src="../Carpeta-imagenes/Icon-perfil.png"></a>
+            <a href="#"><img src="../Carpeta-imagenes/Icon-perfil.png"></a>
             <p>Hector</p>
         </div>
         <div class="contacto-creadores">
-            <a href="../CONTACTO/CONTACTO-ROGERIO/rogerio.html"><img src="../Carpeta-imagenes/Icon-perfil.png"></a>
+            <a href="../CONTACTO/CONTACTO-DIANA/contacto.html"><img src="../Carpeta-imagenes/contacto diana.jpg"></a>
             <p>Diana</p>
         </div>
     </div>
