--- a/WEB-HTML-OO1/aprende-html.html
+++ b/WEB-HTML-OO1/aprende-html.html
@@ -22,7 +22,7 @@
 
 <body>
   <div class="top-nav">
-    <a href="../PAGINA-PRINCIPAL-INICIO/index.html" target="_blank">Inicio</a>
+    <a href="../index.html" target="_blank">Inicio</a>
     <!-- <a href="../NOTICAS/">Noticias</a>-->
     <a href="../FORUM/inicio.html" target="_blank">Forum</a>
     <a href="../CONTACTO/contacto.html" target="_blank">Contacto</a>
